--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
     <!-- <\!-- <button onclick="typeWriter()">Click me</button> -\-> -->
       <!-- <p id="intro"></p> -->
 
+      
       <h1>
-	<a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Yaru.", "I'm a student.", "I code sometimes.", "I love to Write." ]'>
+	Hi, I'm Yaru.
+	I'm a 
+	<a href="" class="typewrite" data-period="2000" data-type='[ "student", "writer", "coder" ]'>
 	  <span class="wrap"></span>
 	</a>
       </h1>
+
 
       
       <script src="js/main.js"></script>
