--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
       
       <h1>
-	Hi, I'm Yaru.
+	Hi, I'm Yaru.<br>
 	I'm a 
-	<a href="" class="typewrite" data-period="2000" data-type='[ "student", "writer", "coder" ]'>
+	<a href="" class="typewrite" data-period="2000" data-type='[ "student.", "writer.", "coder." ]'>
 	  <span class="wrap"></span>
 	</a>
       </h1>
