--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	  <h1>
 	    <br><br>Hi! I'm Yaru.<br>
 	    I'm a 
-	    <a href="" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed twitter addict.", "positivity engager."]'>
+	    <a href="" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed twitter addict."]'>
 	      <span class="wrap"></span>
 	    </a>
 	  </h1>
