--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 	  <img src="img/2.jpg" alt="profile">
 	</div>
       </div>
+
+      <div class="intro">
+	<p>
+	  I'm an incoming freshman at the Unviversity of California, Berkeley. I like working with children, contributing to teams, and listening to indie music when I code. It's nice to meet you!
+	</p>
+      </div>
       
       <script src="js/main.js"></script>
       
