--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	  <h1>
 	    <br><br>Hi! I'm Yaru.<br>
 	    I'm a 
-	    <a href="" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed twitter addict."]'>
+	    <a style="color: #0275DA;" href="" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed twitter addict."]'>
 	      <span class="wrap"></span>
 	    </a>
 	  </h1>
@@ -31,14 +31,14 @@
 	  <img src="img/2.jpg" alt="profile">
 	</div>
       </div>
-
-      <div class="intro">
-	<p>
-	  I'm an incoming freshman at the Unviversity of California, Berkeley. I like working with children, contributing to teams, and listening to indie music when I code. It's nice to meet you!
-	</p>
-      </div>
-      
-      <script src="js/main.js"></script>
-      
+      <br><br>
+	<div class="intro">
+	  <p>
+	    I'm a senior at Stuyvesant High School. I like working with children, contributing to teams, and listening to rock or indie music when I code. It's nice to meet you!
+	  </p>
+	</div>
+	
+	<script src="js/main.js"></script>
+	
   </body>
 </html>
