--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <link rel="icon" href="img/icon.png">
     <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
 
   </head>
   <body>
@@ -19,7 +20,8 @@
       <div class="row">
 	<div class="column">
 	  <h1>
-	    <br><br>Hi! I'm Yaru.<br>
+	    <br><br>
+	    Hi! I'm Yaru.<br>
 	    I'm a 
 	    <a style="color: #0275DA;" href="" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed twitter addict."]'>
 	      <span class="wrap"></span>
@@ -31,12 +33,27 @@
 	  <img src="img/2.jpg" alt="profile">
 	</div>
       </div>
+      <br><br><br><hr><br>
+      <div class="intro">
+	<h3>About me</h3>
+	<p>
+	  Hey! My name is Yaru Luo, but you can call me Ru. I'm a senior at Stuyvesant High School. I like working with children, contributing to teams, and listening to rock or indie music when I code. It's nice to meet you!
+	  <br><br>
+	  I'm interested in both literature and computer science. I'm curious about natural language processing and AI, and I'd like to bridge the divides between science and the humanities.
+	</p>
+      </div>
+
+      <br><hr><br>
+      <div class="about">
+	<h3>About me</h3>
+      </div>
+
       <br><br>
-	<div class="intro">
-	  <p>
-	    I'm a senior at Stuyvesant High School. I like working with children, contributing to teams, and listening to rock or indie music when I code. It's nice to meet you!
-	  </p>
-	</div>
+      <div class="footer">
+	&copy;Yaru Luo || 2020
+      </div>
+      
+	
 	
 	<script src="js/main.js"></script>
 	
