--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</div>
       </div>
       <br><br><br><hr><br>
-      <div class="intro">
+      <div class="about">
 	<h3>About me</h3>
 	<p>
 	  Hey! My name is Yaru Luo, but you can call me Ru. I'm a senior at Stuyvesant High School. I like working with children, contributing to teams, and listening to rock or indie music when I code. It's nice to meet you!
@@ -44,8 +44,22 @@
       </div>
 
       <br><hr><br>
-      <div class="about">
-	<h3>About me</h3>
+      <div class="resume">
+	<h3>Professional Summary</h3>
+	<b>University of California, Berkeley</b> (2020-2024)
+	<span style="float:right;"<i>Bay Area, CA</i></span>
+	<ul>
+	  <li>Expected double major in Literature and Computer Science
+	</ul>
+	<b>Stuyvesant High School</b> (2016-2020)
+	<span style="float:right;"><i>New York City, NY</i></span>
+	<ul>
+	  <li>Overall GPA: 3.8; Technical GPA: 4.00
+	  <li>Relevant Courses: Software Development, AP English Literature, Data Structures & Algorithms
+	  <li>Activities:
+	    <a href="https://stuynaught.github.io/">Zero Robotics</a> co-captain,
+	    <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager
+	    
       </div>
 
       <br><br>
