--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <br><br><br><hr><br>
       <div class="about">
-	<h3>About me</h3>
+	<h2>About me</h2>
 	<p>
 	  Hey! My name is Yaru Luo, but you can call me Ru. I'm a senior at Stuyvesant High School. I like working with children, contributing to teams, and listening to rock or indie music when I code. It's nice to meet you!
 	  <br><br>
@@ -45,7 +45,8 @@
 
       <br><hr><br>
       <div class="resume">
-	<h3>Professional Summary</h3>
+	<h2>Professional Summary</h2>
+	<h3>Education</h3>
 	<b>University of California, Berkeley</b> (2020-2024)
 	<span style="float:right;"<i>Bay Area, CA</i></span>
 	<ul>
@@ -58,8 +59,21 @@
 	  <li>Relevant Courses: Software Development, AP English Literature, Data Structures & Algorithms
 	  <li>Activities:
 	    <a href="https://stuynaught.github.io/">Zero Robotics</a> co-captain,
-	    <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager
-	    
+	    <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete, Red Cross volunteer
+	</ul>
+
+	<h3>Skills</h3>
+	<ul>
+	  <li>Programming: Python, Java, JS, HTML/CSS, Flask
+	  <li>Data Analysis: Pandas, Matlab, Plotly, Excel
+	  <li>Languages: Conversational Mandarin
+	</ul>
+
+	<h3>Awards & Honors</h3>
+	<ul>
+	  <li>First Place in the 2019 International Zero Robotics competition
+	  <li>Best Environmental Hack at ByteHacks, the largest all-women hackathon centered in NYC
+	</ul>
       </div>
 
       <br><br>
