--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</div>
 
 	<div class="column">
-	  <img src="img/2.jpg" alt="profile">
+	  <img src="img/pic.JPG" alt="profile">
 	</div>
       </div>
       <br><br><br><br><br><br><hr><br>
