--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<h2>Professional Summary</h2>
 	<h3>Education</h3>
 	<b>University of California, Berkeley</b> (2020-2024)
-	<span style="float:right;"<i>Bay Area, CA</i></span>
+	<span style="float:right;"><i>Bay Area, CA</i></span>
 	<ul>
 	  <li>Expected double major in Literature and Computer Science
 	</ul>
