--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</div>
 
 	<div class="column">
-	  <img src="img/pic.JPG">
+	  <img src="img/pic.JPG" width="80%">
 	</div>
       </div>
       <br><br><br><br><br><hr><br>
@@ -41,6 +41,10 @@
 	  <br><br>
 	  I'm interested in both literature and computer science. I'm curious about natural language processing and AI, and I'd like to bridge the divides between science and the humanities.
 	</p>
+	<!-- socials -->
+	<a href="https://www.instagram.com/kangyaru">
+	  <img src="img/ig.png" height="20px;" width="20px;">
+	</a>
       </div>
 
       <br><hr><br>
