--- a/index.html
+++ b/index.html
@@ -43,8 +43,15 @@
 	</p>
 	<!-- socials -->
 	<a href="https://www.instagram.com/kangyaru">
-	  <img src="img/ig.png" height="20px;" width="20px;">
+	  <img src="img/ig.png" height="30px;" width="30px;">
 	</a>
+	<a href="https://www.linkedin.com/in/yaruluo/">
+	  <img src="img/li.png" height="30px;" width="30px;">
+	</a>
+	<a href="https://twitter.com/yaruluo_">
+	  <img src="img/tw.png" height="30px;" width="30px;">
+	</a>
+	
       </div>
 
       <br><hr><br>
