--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 	<a href="https://twitter.com/yaruluo_">
 	  <img src="img/tw.png" height="30px;" width="30px;">
 	</a>
+	<a href="https://www.facebook.com/kangyaru">
+	  <img src="img/fb.png" height="30px;" width="30px;">
+	</a>
 	
       </div>
 
