--- a/index.html
+++ b/index.html
@@ -40,13 +40,10 @@
 	  Hey! My name is Yaru Luo, but you can call me Ru. I'm a senior at Stuyvesant High School. I like working with children, contributing to teams, and listening to rock or indie music when I code. It's nice to meet you!
 	  <br><br>
 	  I'm interested in both literature and computer science. I'm curious about natural language processing and AI, and I'd like to bridge the divides between science and the humanities.
-	</p>
+	</p><br>
 	<!-- socials -->
 	<a href="https://www.instagram.com/kangyaru">
 	  <img src="img/ig.png" height="30px;" width="30px;">
-	</a>
-	<a href="https://www.linkedin.com/in/yaruluo/">
-	  <img src="img/li.png" height="30px;" width="30px;">
 	</a>
 	<a href="https://twitter.com/yaruluo_">
 	  <img src="img/tw.png" height="30px;" width="30px;">
@@ -54,7 +51,12 @@
 	<a href="https://www.facebook.com/kangyaru">
 	  <img src="img/fb.png" height="30px;" width="30px;">
 	</a>
-	
+	<a href="https://www.linkedin.com/in/yaruluo/">
+	  <img src="img/li.png" height="30px;" width="30px;">
+	</a>
+	<a href="https://github.com/yaruluo">
+	  <img src="img/gh.png" height="30px;" width="30px;">
+	</a>
       </div>
 
       <br><hr><br>
