--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 	<a href="https://github.com/yaruluo">
 	  <img src="img/gh.png" height="30px;" width="30px;">
 	</a>
+	<a href="mailto:yaruluo09@gmail.com">
+	  <img src="img/gm.png" height="30px;" width="30px;">
+	</a>
       </div>
 
       <br><hr><br>
