--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       <div class="resume">
 	<h2>Professional Summary</h2>
 	<h3>Education</h3>
-	<b>University of California, Berkeley</b> (2020-2024)
-	<span style="float:right;"><i>Bay Area, CA</i></span>
+	<b>University of California, Berkeley / University of Michigan </b> (2020-2024)
+	<span style="float:right;"><i>Bay Area, CA / Ann Arbor, MI</i></span>
 	<ul>
 	  <li>Expected double major in Literature and Computer Science
 	</ul>
