--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="about">
 	<h2>About me</h2>
 	<p>
-	  Hey! My name is Yaru Luo, but you can call me Ru. I'm a senior at Stuyvesant High School. I like working with children, contributing to teams, and listening to rock or indie music when I code. It's nice to meet you!
+	  Hey! My name is Yaru Luo, but you can call me Ru. I'm a senior at Stuyvesant High School and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Ursula le Guin, Virginia Woolf, and David Mitchell. It's nice to meet you!
 	  <br><br>
 	  I'm interested in both literature and computer science. I'm curious about natural language processing and AI, and I'd like to bridge the divides between science and the humanities.
 	</p><br>
