--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	    <br><br>
 	    Hi! I'm Yaru.<br>
 	    I'm a 
-	    <a style="color: #0275DA;" href="" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed twitter addict."]'>
+	    <a style="color: #0275DA;" href="" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed Twitter addict."]'>
 	      <span class="wrap"></span>
 	    </a>
 	  </h1>
