--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       <div class="row">
 	<div class="column">
 	  <h1>
-	    <br><br>
 	    Hi! I'm Yaru.<br>
 	    I'm a 
 	    <a style="color: #0275DA;" href="" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed Twitter addict."]'>
@@ -35,6 +34,7 @@
       </div>
       <br><br><br><br><br><hr><br>
       <div class="about">
+	<a href="about.html">try </a>
 	<h2>About me</h2>
 	<p>
 	  Hey! My name is Yaru Luo, but you can call me Ru. I'm a senior at Stuyvesant High School and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Ursula le Guin, Virginia Woolf, and David Mitchell. It's nice to meet you!
