--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 	<a href="https://www.facebook.com/kangyaru">
 	  <img src="img/fb.png" height="30px;" width="30px;">
 	</a>
+	<a href="https://open.spotify.com/user/22higkqu3v4rzbbi65p7zkfna?si=pdcxvweYQACJLDtPgtE0AA">
+	  <img src="img/sp.png" height="30px;" width="30px;">
+	</a>
 	<a href="https://www.linkedin.com/in/yaruluo/">
 	  <img src="img/li.png" height="30px;" width="30px;">
 	</a>
