--- a/index.html
+++ b/index.html
@@ -42,27 +42,29 @@
 	  I'm interested in both literature and computer science. I'm curious about natural language processing and AI, and I'd like to bridge the divides between science and the humanities.
 	</p><br>
 	<!-- socials -->
-	<a href="https://www.instagram.com/kangyaru">
-	  <img src="img/ig.png" height="30px;" width="30px;">
-	</a>
-	<a href="https://twitter.com/yaruluo_">
-	  <img src="img/tw.png" height="30px;" width="30px;">
-	</a>
-	<a href="https://www.facebook.com/kangyaru">
-	  <img src="img/fb.png" height="30px;" width="30px;">
-	</a>
-	<a href="https://open.spotify.com/user/22higkqu3v4rzbbi65p7zkfna?si=pdcxvweYQACJLDtPgtE0AA">
-	  <img src="img/sp.png" height="30px;" width="30px;">
-	</a>
-	<a href="https://www.linkedin.com/in/yaruluo/">
-	  <img src="img/li.png" height="30px;" width="30px;">
-	</a>
-	<a href="https://github.com/yaruluo">
-	  <img src="img/gh.png" height="30px;" width="30px;">
-	</a>
-	<a href="mailto:yaruluo09@gmail.com">
-	  <img src="img/gm.png" height="30px;" width="30px;">
-	</a>
+	<div class=socials>
+	  <a href="https://www.instagram.com/kangyaru">
+	    <img src="img/ig.png" height="30px;" width="30px;">
+	  </a>
+	  <a href="https://twitter.com/yaruluo_">
+	    <img src="img/tw.png" height="30px;" width="30px;">
+	  </a>
+	  <a href="https://www.facebook.com/kangyaru">
+	    <img src="img/fb.png" height="30px;" width="30px;">
+	  </a>
+	  <a href="https://open.spotify.com/user/22higkqu3v4rzbbi65p7zkfna?si=pdcxvweYQACJLDtPgtE0AA">
+	    <img src="img/sp.png" height="30px;" width="30px;">
+	  </a>
+	  <a href="https://www.linkedin.com/in/yaruluo/">
+	    <img src="img/li.png" height="30px;" width="30px;">
+	  </a>
+	  <a href="https://github.com/yaruluo">
+	    <img src="img/gh.png" height="30px;" width="30px;">
+	  </a>
+	  <a href="mailto:yaruluo09@gmail.com">
+	    <img src="img/gm.png" height="30px;" width="30px;">
+	  </a>
+	</div>
       </div>
 
       <br><hr><br>
