--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- <h1>Typewriter</h1> -->
     <!-- <\!-- <button onclick="typeWriter()">Click me</button> -\-> -->
       <!-- <p id="intro"></p> -->
+      <div class="header" style="padding:0%;">
+      </div>
 
       <div class="row">
 	<div class="column">
@@ -41,6 +43,13 @@
 	  <br><br>
 	  I'm interested in both literature and computer science. I'm curious about natural language processing and AI, and I'd like to bridge the divides between science and the humanities.
 	</p><br>
+      </div>
+
+      <br><hr><br>
+
+      <br><br>
+      <div class="footer">
+	
 	<!-- socials -->
 	<div class=socials>
 	  <a href="https://www.instagram.com/kangyaru">
@@ -65,46 +74,8 @@
 	    <img src="img/gm.png" height="30px;" width="30px;">
 	  </a>
 	</div>
+	<br>&copy;Yaru Luo || 2020
       </div>
-
-      <br><hr><br>
-      <div class="resume">
-	<h2>Professional Summary</h2>
-	<h3>Education</h3>
-	<b>University of California, Berkeley / University of Michigan </b> (2020-2024)
-	<span style="float:right;"><i>Bay Area, CA / Ann Arbor, MI</i></span>
-	<ul>
-	  <li>Expected double major in Literature and Computer Science
-	</ul>
-	<b>Stuyvesant High School</b> (2016-2020)
-	<span style="float:right;"><i>New York City, NY</i></span>
-	<ul>
-	  <li>Overall GPA: 3.8; Technical GPA: 4.00
-	  <li>Relevant Courses: Software Development, AP English Literature, Data Structures & Algorithms
-	  <li>Activities:
-	    <a href="https://stuynaught.github.io/">Zero Robotics</a> co-captain,
-	    <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete, Red Cross volunteer
-	</ul>
-
-	<h3>Skills</h3>
-	<ul>
-	  <li>Programming: Python, Java, JS, HTML/CSS, Flask
-	  <li>Data Analysis: Pandas, Matlab, Plotly, Excel
-	  <li>Languages: Conversational Mandarin
-	</ul>
-
-	<h3>Awards & Honors</h3>
-	<ul>
-	  <li>First Place in the 2019 International Zero Robotics competition
-	  <li>Best Environmental Hack at ByteHacks, the largest all-women hackathon centered in NYC
-	</ul>
-      </div>
-
-      <br><br>
-      <div class="footer">
-	&copy;Yaru Luo || 2020
-      </div>
-      
 	
 	
 	<script src="js/main.js"></script>
