--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- <h1>Typewriter</h1> -->
     <!-- <\!-- <button onclick="typeWriter()">Click me</button> -\-> -->
       <!-- <p id="intro"></p> -->
-      <div class="header" style="padding:0%;">
+      <div class="header">
+	<a href="about.html">Professional Summary</a>
       </div>
 
       <div class="row">
@@ -36,7 +37,6 @@
       </div>
       <br><br><br><br><br><hr><br>
       <div class="about">
-	<a href="about.html">try </a>
 	<h2>About me</h2>
 	<p>
 	  Hey! My name is Yaru Luo, but you can call me Ru. I'm a senior at Stuyvesant High School and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Ursula le Guin, Virginia Woolf, and David Mitchell. It's nice to meet you!
