--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <!-- <\!-- <button onclick="typeWriter()">Click me</button> -\-> -->
       <!-- <p id="intro"></p> -->
       <div class="header">
-	<a href="about.html">Professional Summary</a>
-      </div>
+	<a href="index.html">Home</a>
+	<a href="about.html">About</a>
+	<a href="projects.html">Projects</a>
+      </div><br><br>
 
       <div class="row">
 	<div class="column">
