--- a/about.html
+++ b/about.html
@@ -12,6 +12,11 @@
 
   </head>
   <body>
+      <div class="header">
+	<a href="index.html">Home</a>
+	<a href="about.html">About</a>
+	<a href="projects.html">Projects</a>
+      </div><br>
     <div class="resume">
       <h2>Professional Summary</h2>
       <h3>Education</h3>
@@ -47,7 +52,7 @@
       
       
       <!-- socials -->
-      <div class=socials>
+      <div class="socials">
 	<a href="https://www.instagram.com/kangyaru">
 	  <img src="img/ig.png" height="30px;" width="30px;">
 	</a>
@@ -70,7 +75,7 @@
 	  <img src="img/gm.png" height="30px;" width="30px;">
 	</a>
       </div>
-      &copy;Yaru Luo || 2020
+      <br>&copy;Yaru Luo || 2020
     </div>
   </body>
 </html>
