--- a/index.html
+++ b/index.html
@@ -12,42 +12,40 @@
 
   </head>
   <body>
-    <!-- onLoad="typeWriter();"> -->
-    <!-- <h1>Typewriter</h1> -->
-    <!-- <\!-- <button onclick="typeWriter()">Click me</button> -\-> -->
-      <!-- <p id="intro"></p> -->
-      <div class="header">
-	<a href="index.html">Home</a>
-	<a href="about.html">About</a>
-	<a href="projects.html">Projects</a>
-      </div><br><br>
+  	<div class="header">
+  	    <a href="index.html">Home</a>
+  	    <a href="about.html">About</a>
+  	    <a href="projects.html">Portfolio</a>
+  	</div>
+    <br><br>
 
-      <div class="row">
-	<div class="column">
-	  <h1>
-	    Hi! I'm Yaru.<br>
-	    I'm a 
-	    <a style="color: #0275DA;" href="" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed Twitter addict."]'>
-	      <span class="wrap"></span>
-	    </a>
-	  </h1>
+      <div class="content">
+	<div class="row">
+	  <div class="column">
+	    <h1>
+	      Hi! I'm Yaru.<br>
+	      I'm a 
+	      <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed Twitter addict."]'>
+		<span class="wrap"></span>
+	      </a>
+	    </h1>
+	  </div>
+
+	  <div class="column">
+	    <img src="img/pic.JPG" width="80%">
+	  </div>
 	</div>
-
-	<div class="column">
-	  <img src="img/pic.JPG" width="80%">
+	<br><br><br><br><br><hr><br>
+	<div class="about">
+	  <h2>About me</h2>
+	  <p>
+	    Hey! My name is Yaru Luo, but you can call me Ru. I'm a senior at Stuyvesant High School and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Ursula le Guin, Virginia Woolf, and David Mitchell. It's nice to meet you!
+	    <br><br>
+	    I'm interested in both literature and computer science. I'm curious about natural language processing and AI, and I'd like to bridge the divides between science and the humanities.
+	  </p><br>
 	</div>
-      </div>
-      <br><br><br><br><br><hr><br>
-      <div class="about">
-	<h2>About me</h2>
-	<p>
-	  Hey! My name is Yaru Luo, but you can call me Ru. I'm a senior at Stuyvesant High School and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Ursula le Guin, Virginia Woolf, and David Mitchell. It's nice to meet you!
-	  <br><br>
-	  I'm interested in both literature and computer science. I'm curious about natural language processing and AI, and I'd like to bridge the divides between science and the humanities.
-	</p><br>
-      </div>
-
       <br><hr><br>
+      </div>
 
       <br><br>
       <div class="footer">
