--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-------------------- NAV BAR -------------------->
     <div id="mySidebar" class="sidebar">
+      <img src="img/pfp.JPG">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       <a href="index.html">Home</a>
       <a href="#about">About</a>
@@ -31,19 +32,18 @@
     <div class="content">
       <!-------------------- HELLO -------------------->
       <div class="row">
-	<div class="column" id="one">
-	  <span id="first">Hi! I'm Yaru.</span><br>
-	  <span id="second">
-	    I'm a 
-	    <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed Twitter addict."]'>
-	      <span class="wrap"></span>
-	    </a>
-	  </span>
-	</div>
+      	<div class="column" id="one">
+      	  <span id="first">Hi! I'm Yaru.</span><br><br><br>
+      	  <span id="second">
+      	    I'm a
+      	    <a style="color: #0275DA;" class="typewrite" data-period="2000" data-type='[ "student.", "coder.", "writer.", "self-proclaimed Twitter addict."]'>
+      	    </a>
+      	  </span>
+      	</div>
 
-	<div class="column" id="two">
-	  <img src="img/pic.JPG" width="80%">
-	</div>
+      	<div class="column" id="two">
+      	  <img src="img/pic.JPG" width="80%">
+      	</div>
       </div>
       <br><br><br>
 
