--- a/index.html
+++ b/index.html
@@ -16,12 +16,38 @@
     <!-------------------- NAV BAR -------------------->
     <div id="mySidebar" class="sidebar">
       <img src="img/pfp.JPG">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-      <a href="index.html">Home</a>
-      <a href="#about">About</a>
-      <a href="#resume">Resume</a>
-      <a href="projects.html">Portfolio</a>
-      <!-- <a href="">Contact</a> -->
+      <p> Yaru Luo </p>
+
+      <div class="links">
+	<a href="test">
+	  <img src="img/test/twitter.png"
+	       onmouseover="this.src='img/test/tw2.png'"
+	       onmouseout="this.src='img/test/twitter.png'"
+	       height="30px;" width="30px;">
+	</a>
+	<a href="https://twitter.com/yaruluo_">
+	  <img src="img/tw.png" height="30px;" width="30px;">
+	</a>
+	<a href="https://www.facebook.com/kangyaru">
+	  <img src="img/fb.png" height="30px;" width="30px;">
+	</a>
+	<a href="https://open.spotify.com/user/22higkqu3v4rzbbi65p7zkfna?si=pdcxvweYQACJLDtPgtE0AA">
+	  <img src="img/sp.png" height="30px;" width="30px;">
+	</a>
+	<a href="https://www.linkedin.com/in/yaruluo/">
+	  <img src="img/li.png" height="30px;" width="30px;">
+	</a>
+      </div>
+
+      <div class="navigating">
+	<br><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+	<br><a href="index.html">Home</a>
+	<br><a href="#about">About</a>
+	<br><a href="#resume">Resume</a>
+	<br><a href="projects.html">Portfolio</a>
+	<br><a href="">Contact</a>
+      </div>
+      
     </div>
 
     <div id="main">
