--- a/index.html
+++ b/index.html
@@ -19,14 +19,11 @@
       <p> Yaru Luo </p>
 
       <div class="links">
-	<a href="test">
-	  <img src="img/test/twitter.png"
-	       onmouseover="this.src='img/test/tw2.png'"
-	       onmouseout="this.src='img/test/twitter.png'"
+	<a href="https://twitter.com/yaruluo">
+	  <img src="img/socials/tw.png"
+	       onmouseover="this.src='img/socials/tw2.png'"
+	       onmouseout="this.src='img/socials/tw.png'"
 	       height="30px;" width="30px;">
-	</a>
-	<a href="https://twitter.com/yaruluo_">
-	  <img src="img/tw.png" height="30px;" width="30px;">
 	</a>
 	<a href="https://www.facebook.com/kangyaru">
 	  <img src="img/fb.png" height="30px;" width="30px;">
