--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
     <div id="mySidebar" class="sidebar">
       <img src="img/pfp.JPG">
       <p> Yaru Luo </p>
-
       <div class="links">
+	<a href="https://www.instagram.com/kangyaru">
+	  <img src="img/socials/ig.png"
+	       onmouseover="this.src='img/socials/ig2.png'"
+	       onmouseout="this.src='img/socials/ig.png'"
+	       height="30px;" width="30px;">
+	</a>
 	<a href="https://twitter.com/yaruluo">
 	  <img src="img/socials/tw.png"
 	       onmouseover="this.src='img/socials/tw2.png'"
@@ -26,7 +31,10 @@
 	       height="30px;" width="30px;">
 	</a>
 	<a href="https://www.facebook.com/kangyaru">
-	  <img src="img/fb.png" height="30px;" width="30px;">
+	   <img src="img/socials/fb.png"
+	       onmouseover="this.src='img/socials/fb2.png'"
+	       onmouseout="this.src='img/socials/fb.png'"
+	       height="30px;" width="30px;">
 	</a>
 	<a href="https://open.spotify.com/user/22higkqu3v4rzbbi65p7zkfna?si=pdcxvweYQACJLDtPgtE0AA">
 	  <img src="img/sp.png" height="30px;" width="30px;">
