linked in and spotify

--- a/index.html
+++ b/index.html
@@ -37,15 +37,22 @@
 	       height="30px;" width="30px;">
 	</a>
 	<a href="https://open.spotify.com/user/22higkqu3v4rzbbi65p7zkfna?si=pdcxvweYQACJLDtPgtE0AA">
-	  <img src="img/sp.png" height="30px;" width="30px;">
+	  <img src="img/socials/sp.png"
+	       onmouseover="this.src='img/socials/sp2.png'"
+	       onmouseout="this.src='img/socials/sp.png'"
+	       height="30px;" width="30px;">
 	</a>
 	<a href="https://www.linkedin.com/in/yaruluo/">
-	  <img src="img/li.png" height="30px;" width="30px;">
+	  <img src="img/socials/li.png"
+	       onmouseover="this.src='img/socials/li2.png'"
+	       onmouseout="this.src='img/socials/li.png'"
+	       height="30px;" width="30px;">
 	</a>
       </div>
 
       <div class="navigating">
 	<br><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+
 	<br><a href="index.html">Home</a>
 	<br><a href="#about">About</a>
 	<br><a href="#resume">Resume</a>
@@ -57,8 +64,9 @@
 
     <div id="main">
       <button class="openbtn" onclick="openNav()">☰</button>
+      
 
-    <br><br>
+    <br><br><br><br>
     
     <div class="content">
       <!-------------------- HELLO -------------------->
