--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <div class="navigating">
 	<br><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 
-	<br><a href="index.html">Home</a>
+	<br><a href="#main">Home</a>
 	<br><a href="#about">About</a>
 	<br><a href="#resume">Resume</a>
-	<br><a href="projects.html">Portfolio</a>
+	<br><a href="#projects">Portfolio</a>
 	<br><a href="">Contact</a>
       </div>
       
@@ -133,6 +133,13 @@
       </div>
 
     </div>
+    <br>
+
+    <!-------------------- PORTFOLIO -------------------->
+    <div class="projects" id="projects">
+      <hr><br>
+      <h2>Portfolio</h2>
+    
 
     <!-------------------- FOOTER -------------------->
     <br><br>
