--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-------------------- NAV BAR -------------------->
     <div id="mySidebar" class="sidebar">
-      <img src="img/pfp.JPG">
+      <img src="img/b.jpg">
       <p> Yaru Luo </p>
       <div class="links">
 	<a href="https://www.instagram.com/kangyaru">
