--- a/essays.html
+++ b/essays.html
@@ -140,6 +140,15 @@
 	    </ol><br>
 	    In a letter, Woolf once said when writing a novel, what you start with“is a world. Then, when one has imagined this world, suddenly people come in.” Reading is easy: one engages in the cavalier consumption of others. Then they implicate the interpretive space between the words, and the world. Writing is different. There is an immense mystery in trying to illustrate these worlds, people, situations, plots; and a moral quandary in trying to uncover them anyway. It’s so easy to convince myself that I’m not good at writing because of all the fantastic authors I read. I try to write in my Writer’s Notebook as much as I brush my teeth, but it takes so long to become happy with something I’ve written. But there’s also a great and indescribable feeling after throwing out 99 lines of shit and getting one line of good prose. And that’s all you need, really, to start that “world”: one line of good prose. Then, <i>suddenly people come in.</i>
 
+	<div style="font-size: 12px;">
+	  <br><br>
+	  <br><sup>1</sup>  I Write, Therefore I Am.
+	  <br><sup>2</sup> (which is super trite unless it’s written with sincerity)
+	  <br><sup>3</sup> My friend once sent me an article titled “26 Types of English Majors,” along with the message: YOUUUU 🤯🤯. I’ve self-selected my type(s) as "#4: The superstitious student who will only read/write under a specific tree" and "#17: The person who's always trying to dismantle the literary patriarchy". Take that how you will, reading this piece. 
+
+	  <br><sup>4</sup> Mr. Kim, my first Asian-American English teacher. But that's a rumination for another day.
+	  <br><sup>5</sup> My mother… angry at a one-year-old… We’ve been arguing since the get-go. But we still love each other, and very much so. Oftentimes, Chinese mothers have inherited a legacy of silence and oppression that takes a daughter’s strength to confront and override.
+	</div>
 	    
 
 
