beautiful nav bar yay

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	       onmouseout="this.src='img/socials/ig.png'"
 	       height="30px;" width="30px;">
 	</a>
-	<a href="https://twitter.com/yaruluo">
+	<a href="https://twitter.com/yaruluo_">
 	  <img src="img/socials/tw.png"
 	       onmouseover="this.src='img/socials/tw2.png'"
 	       onmouseout="this.src='img/socials/tw.png'"
@@ -53,11 +53,12 @@
       <div class="navigating">
 	<br><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 
-	<br><a href="#main">Home</a>
-	<br><a href="#about">About</a>
-	<br><a href="#resume">Resume</a>
-	<br><a href="#projects">Portfolio</a>
-	<br><a href="">Contact</a>
+	<br>
+	<a href="index.html" onmouseover="img.src='img/icons/homeB.png'"><img src="img/icons/homeG.png" height="20px;" width="20px;"> <span>Home</span></a>
+	<br><a href="#about"><img src="img/icons/aboutG.png" height="20px;" width="20px;"> <span>About</span></a>
+	<br><a href="#resume"><img src="img/icons/resumeG.png" height="20px;" width="20px;"> <span>Resume</span></a>
+	<br><a href="#projects"><img src="img/icons/portG.png" height="20px;" width="20px;"> <span>Portfolio</span></a>
+	<br><a href=""><img src="img/icons/contactG.png" height="20px;" width="20px;"> <span>Contact</span></a>
       </div>
       
     </div>
