--- a/essays.html
+++ b/essays.html
@@ -24,7 +24,7 @@
 	       onmouseout="this.src='img/socials/ig.png'"
 	       height="30px;" width="30px;">
 	</a>
-	<a href="https://twitter.com/yaruluo">
+	<a href="https://twitter.com/yaruluo_">
 	  <img src="img/socials/tw.png"
 	       onmouseover="this.src='img/socials/tw2.png'"
 	       onmouseout="this.src='img/socials/tw.png'"
@@ -53,11 +53,11 @@
       <div class="navigating">
 	<br><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 
-	<br><a href="#main">Home</a>
-	<br><a href="#about">About</a>
-	<br><a href="#resume">Resume</a>
-	<br><a href="#projects">Portfolio</a>
-	<br><a href="">Contact</a>
+	<br><a href="index.html">Home</a>
+	<br><a href="index.html#about">About</a>
+	<br><a href="index.html#resume">Resume</a>
+	<br><a href="">Portfolio</a>
+	<br><a href="index.html">Contact</a>
       </div>
       
     </div>
@@ -73,7 +73,9 @@
       <h2>Scribo, Ergo Sum<sup>1</sup></h2>
 
       <p>
-	Of course, I’m stealing what George Orwell and Joan Didion have already done so well and writing about writing.<sup>2</sup>
+	I have a confession to make. I am an illiterate English major. Yes, I can read and write. But I can't quote Sartyr, recite Shakespeare, or tell you what the hell was going on in Moby Dick. But I do love words. And I am a Writer. 
+	<br><br>
+	I admit, of course, I’m stealing what George Orwell and Joan Didion have already done so well and writing about writing.<sup>2</sup>
 	<br><br>
 	But what Orwell and Didion couldn’t have done, I argue, is certify how their cultures have clashed with their vocation. It’s normal for an Asian-American to capitalize her culture, to use it as a marker of her identity. For white-Americans, ethnicity is flexible and voluntary. Its importance is based on whether or not the person wants to emphasize it. For nonwhite-Americans, it’s something real and ascribed, with social and political consequences.
 	<br><br>
