--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Yaru Luo</title>
     
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="img/yl.png">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     
@@ -15,7 +15,7 @@
 
     <!-------------------- NAV BAR -------------------->
     <div id="mySidebar" class="sidebar">
-      <img src="img/b.jpg">
+      <img src="img/b.png">
       <p> Yaru Luo </p>
       <div class="links">
 	<a href="https://www.instagram.com/kangyaru">
