--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Yaru Luo</title>
     
-    <link rel="icon" href="img/yl.png">
+    <link rel="icon" href="img/icons/yl.png">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     
@@ -15,7 +15,7 @@
 
     <!-------------------- NAV BAR -------------------->
     <div id="mySidebar" class="sidebar">
-      <img src="img/b.png">
+      <img src="img/me/b.png">
       <p> Yaru Luo </p>
       <div class="links">
 	<a href="https://www.instagram.com/kangyaru">
@@ -82,7 +82,7 @@
       	  </div>
 
       	  <div class="column" id="two">
-      	    <img src="img/pic.JPG" width="80%">
+      	    <img src="img/me/pic.JPG" width="80%">
       	  </div>
 	</div>
 	<br><br><br>
@@ -97,7 +97,6 @@
 	    I'm interested in both literature and computer science, and I'd like to bridge the divides between science and the humanities.
 	  </p><br>
 	</div>
-	<br>
 
 	<!-------------------- RESUME -------------------->
 	<div class="resume" id="resume">
@@ -140,37 +139,37 @@
 	  <hr><br>
 	  <h2>Portfolio</h2>
 
-	  <a href="essays.html">Creative nonfiction.</a>
+	  <a href="essays.html">Creative nonfiction</a>
 
 	</div>
 	
 
 	<!-------------------- FOOTER -------------------->
-	<br><br>
+	<br><br><hr><br><br>
 	<div class="footer">
 	  
 	  <!-- socials -->
 	  <div class=socials>
 	    <a href="https://www.instagram.com/kangyaru">
-	      <img src="img/ig.png" height="30px;" width="30px;">
+	      <img src="img/footer/ig.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="https://twitter.com/yaruluo_">
-	      <img src="img/tw.png" height="30px;" width="30px;">
+	      <img src="img/footer/tw.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="https://www.facebook.com/kangyaru">
-	      <img src="img/fb.png" height="30px;" width="30px;">
+	      <img src="img/footer/fb.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="https://open.spotify.com/user/22higkqu3v4rzbbi65p7zkfna?si=pdcxvweYQACJLDtPgtE0AA">
-	      <img src="img/sp.png" height="30px;" width="30px;">
+	      <img src="img/footer/sp.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="https://www.linkedin.com/in/yaruluo/">
-	      <img src="img/li.png" height="30px;" width="30px;">
+	      <img src="img/footer/li.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="https://github.com/yaruluo">
-	      <img src="img/gh.png" height="30px;" width="30px;">
+	      <img src="img/footer/gh.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="mailto:yaruluo09@gmail.com">
-	      <img src="img/gm.png" height="30px;" width="30px;">
+	      <img src="img/footer/gm.png" height="30px;" width="30px;">
 	    </a>
 	  </div>
 	  <br>&copy;Yaru Luo || 2020
