--- a/essays.html
+++ b/essays.html
@@ -15,7 +15,7 @@
 
     <!-------------------- NAV BAR -------------------->
     <div id="mySidebar" class="sidebar">
-      <img src="img/b.jpg">
+      <img src="img/me/b.png">
       <p> Yaru Luo </p>
       <div class="links">
 	<a href="https://www.instagram.com/kangyaru">
@@ -163,25 +163,25 @@
 	  <!-- socials -->
 	  <div class=socials>
 	    <a href="https://www.instagram.com/kangyaru">
-	      <img src="img/ig.png" height="30px;" width="30px;">
+	      <img src="img/footer/ig.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="https://twitter.com/yaruluo_">
-	      <img src="img/tw.png" height="30px;" width="30px;">
+	      <img src="img/footer/tw.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="https://www.facebook.com/kangyaru">
-	      <img src="img/fb.png" height="30px;" width="30px;">
+	      <img src="img/footer/fb.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="https://open.spotify.com/user/22higkqu3v4rzbbi65p7zkfna?si=pdcxvweYQACJLDtPgtE0AA">
-	      <img src="img/sp.png" height="30px;" width="30px;">
+	      <img src="img/footer/sp.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="https://www.linkedin.com/in/yaruluo/">
-	      <img src="img/li.png" height="30px;" width="30px;">
+	      <img src="img/footer/li.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="https://github.com/yaruluo">
-	      <img src="img/gh.png" height="30px;" width="30px;">
+	      <img src="img/footer/gh.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="mailto:yaruluo09@gmail.com">
-	      <img src="img/gm.png" height="30px;" width="30px;">
+	      <img src="img/footer/gm.png" height="30px;" width="30px;">
 	    </a>
 	  </div>
 	  <br>&copy;Yaru Luo || 2020
