fixed phone, removed pushing for nav bar

--- a/index.html
+++ b/index.html
@@ -136,10 +136,15 @@
 
 	<!-------------------- PORTFOLIO -------------------->
 	<div class="projects" id="projects">
+
 	  <hr><br>
 	  <h2>Portfolio</h2>
-
+	  
+	  <h3>Written Work</h3>
 	  <a href="essays.html">Creative nonfiction</a>
+
+	  <h3>Projects</h3>
+
 
 	</div>
 	
