if clicked outside navbar closes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <br><br><br><br>
       
-      <div class="content">
+      <div class="content" id="content">
 	<!-------------------- HELLO -------------------->
 	<div class="row">
       	  <div class="column" id="one">
