ok now fixed the navbar closing

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div id="main">
-      <button class="openbtn" onclick="openNav()">☰</button>
+      <button class="openbtn" id="openbtn" onclick="openNav()">☰</button>
       
 
       <br><br><br><br>
