on hover navbar img blue

--- a/index.html
+++ b/index.html
@@ -52,13 +52,27 @@
 
       <div class="navigating">
 	<br><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-
-	<br>
-	<a href="index.html" onmouseover="img.src='img/icons/homeB.png'"><img src="img/icons/homeG.png" height="20px;" width="20px;"> <span>Home</span></a>
-	<br><a href="#about"><img src="img/icons/aboutG.png" height="20px;" width="20px;"> <span>About</span></a>
-	<br><a href="#resume"><img src="img/icons/resumeG.png" height="20px;" width="20px;"> <span>Resume</span></a>
-	<br><a href="#projects"><img src="img/icons/portG.png" height="20px;" width="20px;"> <span>Portfolio</span></a>
-	<br><a href=""><img src="img/icons/contactG.png" height="20px;" width="20px;"> <span>Contact</span></a>
+	
+	<br><a href="index.html"
+	       onmouseover="navA.src='img/icons/homeB.png'"
+	       onmouseout="navA.src='img/icons/homeG.png'">
+	  <img id="navA" src="img/icons/homeG.png" height="20px;" width="20px;"> <span>Home</span></a>
+	<br><a href="#about"
+	       onmouseover="navB.src='img/icons/aboutB.png'"
+	       onmouseout="navB.src='img/icons/aboutG.png'">
+	  <img id="navB" src="img/icons/aboutG.png" height="20px;" width="20px;"> <span>About</span></a>
+	<br><a href="#resume"
+	       onmouseover="navC.src='img/icons/resumeB.png'"
+	       onmouseout="navC.src='img/icons/resumeG.png'">
+	  <img id="navC" src="img/icons/resumeG.png" height="20px;" width="20px;"> <span>Resume</span></a>
+	<br><a href="#projects"
+	       onmouseover="navD.src='img/icons/portB.png'"
+	       onmouseout="navD.src='img/icons/portG.png'">
+	  <img id="navD" src="img/icons/portG.png" height="20px;" width="20px;"> <span>Portfolio</span></a>
+	<br><a href=""
+	       onmouseover="navE.src='img/icons/contactB.png'"
+	       onmouseout="navE.src='img/icons/contactG.png'">
+	  <img id="navE" src="img/icons/contactG.png" height="20px;" width="20px;"> <span>Contact</span></a>
       </div>
       
     </div>
