--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	       onmouseover="navD.src='img/icons/portB.png'"
 	       onmouseout="navD.src='img/icons/portG.png'">
 	  <img id="navD" src="img/icons/portG.png" height="20px;" width="20px;"> <span>Portfolio</span></a>
-	<br><a href=""
+	<br><a href="mailto:yaruluo09@gmail.com"
 	       onmouseover="navE.src='img/icons/contactB.png'"
 	       onmouseout="navE.src='img/icons/contactG.png'">
 	  <img id="navE" src="img/icons/contactG.png" height="20px;" width="20px;"> <span>Contact</span></a>
