--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 	  <h3>Written Work</h3>
 	  <a href="essays.html">Creative nonfiction</a>
 
-	  <h3>Projects</h3>
+	  <h3>Senior Portrait</h3>
 
 
 	</div>
