--- a/essays.html
+++ b/essays.html
@@ -24,7 +24,7 @@
 	       onmouseout="this.src='img/socials/ig.png'"
 	       height="30px;" width="30px;">
 	</a>
-	<a href="https://twitter.com/yaruluo_">
+	<a href="https://twitter.com/yaruluo09">
 	  <img src="img/socials/tw.png"
 	       onmouseover="this.src='img/socials/tw2.png'"
 	       onmouseout="this.src='img/socials/tw.png'"
@@ -171,7 +171,7 @@
 	    <br><sup>3</sup> My friend once sent me an article titled “26 Types of English Majors,” along with the message: YOUUUU 🤯🤯. I’ve self-selected my type(s) as "#4: The superstitious student who will only read/write under a specific tree" and "#17: The person who's always trying to dismantle the literary patriarchy". Take that how you will, reading this piece. 
 
 	    <br><sup>4</sup> Mr. Kim, my first Asian-American English teacher. But that's a rumination for another day.
-	    <br><sup>5</sup> My mother… angry at a one-year-old… We’ve been arguing since the get-go. But we still love each other, and very much so. Oftentimes, Chinese mothers have inherited a legacy of silence and oppression that takes a daughter’s strength to confront and override.
+	    <br><sup>5</sup> My mother… angry at a one-year-old… We’ve been arguing since the get-go. But we still love each other. Oftentimes, Chinese mothers have inherited a legacy of silence and oppression that takes a daughter’s strength to confront and override.
 	  </div>
 	  
 
@@ -187,7 +187,7 @@
 	  <a href="https://www.instagram.com/kangyaru">
 	    <img src="img/footer/ig.png" height="30px;" width="30px;">
 	  </a>
-	  <a href="https://twitter.com/yaruluo_">
+	  <a href="https://twitter.com/yaruluo09">
 	    <img src="img/footer/tw.png" height="30px;" width="30px;">
 	  </a>
 	  <a href="https://www.facebook.com/kangyaru">
