--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	       onmouseout="this.src='img/socials/ig.png'"
 	       height="30px;" width="30px;">
 	</a>
-	<a href="https://twitter.com/yaruluo_">
+	<a href="https://twitter.com/yaruluo09">
 	  <img src="img/socials/tw.png"
 	       onmouseover="this.src='img/socials/tw2.png'"
 	       onmouseout="this.src='img/socials/tw.png'"
@@ -120,7 +120,7 @@
 	  <b>University of Michigan </b> (2020-2024)
 	  <span style="float:right;"><i>Ann Arbor, MI</i></span>
 	  <ul>
-	    <li>Expected double major in Literature and Computer Science
+	    <li>Expected dual major in English Literature and Computer Science
 	  </ul>
 	  <b>Stuyvesant High School</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
@@ -129,7 +129,26 @@
 	    <li>Relevant Courses: Software Development, AP English Literature, Data Structures & Algorithms
 	    <li>Activities:
 	      <a href="https://stuynaught.github.io/">Zero Robotics</a> co-captain,
-	      <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete, Red Cross volunteer
+	      <a href="https://www.stuyspec.com">Stuyvesant Spectator</a> business manager, StuyFem board director, Track & Field athlete, Google Mentorship program mentee, Red Cross volunteer
+	  </ul>
+
+	  <h3>Experience</h3>
+	  <b>The Stuyvesant Spectator</b> (2016-2020)
+	  <span style="float:right;"><i>New York City, NY</i></span>
+	  <br><i>Business Manager</i>
+	  <ul>
+	    <li>Generated new record-high revenue for Stuyvesant's student-run newspaper
+	    <li>Marketed and negotiated to companies for advertisements and sponsorships
+	    <li>Handled all finances of the Spectator 
+	    <li>Oversaw 30+ members of the business department 
+	  </ul>
+	  <b>New York City Council</b> (2018-2019)
+	  <span style="float:right;"><i>New York City, NY</i></span>
+	  <br><i>Intern for Council Member Margaret Chin</i>
+	  <ul>
+	    <li>Worked with government agencies to conduct policy and legislative research
+	    <li>Assisted staff with constituent intakes, translating between Mandarin to English 
+	    <li>Attended community events and City Council meetings to record notes
 	  </ul>
 
 	  <h3>Skills</h3>
@@ -158,7 +177,11 @@
 	  <a href="essays.html">Creative nonfiction</a>
 
 	  <h3>Senior Portrait</h3>
-
+	  
+	  <!-- <h3>Projects</h3> -->
+	  <!-- https://yaruluo.techscholars.repl.co/ -->
+	  <!-- http://p4.jckiesd.tech/ -->
+	  <!-- https://htmlpreview.github.io/?https://github.com/yaruluo/Not-My-Problem/blob/master/index.html -->
 
 	</div>
 	
@@ -172,7 +195,7 @@
 	    <a href="https://www.instagram.com/kangyaru">
 	      <img src="img/footer/ig.png" height="30px;" width="30px;">
 	    </a>
-	    <a href="https://twitter.com/yaruluo_">
+	    <a href="https://twitter.com/yaruluo09">
 	      <img src="img/footer/tw.png" height="30px;" width="30px;">
 	    </a>
 	    <a href="https://www.facebook.com/kangyaru">
