--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	  <b>University of Michigan </b> (2020-2024)
 	  <span style="float:right;"><i>Ann Arbor, MI</i></span>
 	  <ul>
-	    <li>Expected dual major in English Literature and Computer Science
+	    <li>Expected dual degree in English Literature and Computer Science
 	  </ul>
 	  <b>Stuyvesant High School</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
@@ -160,7 +160,7 @@
 
 	  <h3>Awards & Honors</h3>
 	  <ul>
-	    <li>First Place in the 2019 International Zero Robotics competition
+	    <li>First Place Champions at the 2019 International Zero Robotics competition
 	    <li>Best Environmental Hack at ByteHacks, the largest all-women hackathon centered in NYC
 	  </ul>
 	</div>
