--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
 	  <p>
 	    Hey! My name is Yaru Luo, but you can call me Ru. I'm a senior at Stuyvesant High School and I'm from NYC. I like working with children, contributing to teams, and listening to rock or indie music when I code. I'm a big Yankees fan and I absolutely love reading Ursula le Guin, Virginia Woolf, and David Mitchell. It's nice to meet you!
 	    <br><br>
-	    I'm interested in both literature and computer science, and I'd like to bridge the divides between science and the humanities.
 	  </p><br>
 	</div>
 
@@ -120,7 +119,7 @@
 	  <b>University of Michigan </b> (2020-2024)
 	  <span style="float:right;"><i>Ann Arbor, MI</i></span>
 	  <ul>
-	    <li>Expected dual degree in English Literature and Computer Science
+	    <li>Expected major in Creative Writing and Literature and dual minors in Gender, Race, & Nation and Arts & Design
 	  </ul>
 	  <b>Stuyvesant High School</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
