--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	  <b>University of Michigan </b> (2020-2024)
 	  <span style="float:right;"><i>Ann Arbor, MI</i></span>
 	  <ul>
-	    <li>Expected major in Creative Writing and Literature and  minor in Gender, Race, & Nation
+	    <li>Expected major in Creative Writing and Literature and  minors in Gender, Race, & Nation and Computer Science
 	  </ul>
 	  <b>Stuyvesant High School</b> (2016-2020)
 	  <span style="float:right;"><i>New York City, NY</i></span>
